# Lidar_com

./: README.md
adapter/: CMakeLists.txt  LidarParser.cpp  LidarParser.hpp  LidarTypes.hpp  README  UdpReceiver.cpp  UdpReceiver.hpp  lidar_adapter_validator.py  main.cpp  vsomeip_adapter.json
emulator/: lidar_sensor_emulator.py
gateway/: lidar_someip_config.json
gateway/configs/: vsomeip_local.json
gateway/notes/: integration_notes.md
gateway/scripts/: build_gateway.sh  run_gatewayd.sh  run_someipd.sh
